add partials to static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title,'Lim-House') %>
-<h1>Lim-House home page</h1>
-
+<div class="center hero-unit">
+	<h1>Welcome to the Lim-House</h1>
+		<h2>This is the home page for the Lim-House application.</h2>
+		<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'%>
