--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,11 @@
 @import "bootstrap";
 
+@mixin box_sizing {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 $lightGray: #999;
 $grayMediumLight: #eaeaea;
 
@@ -63,6 +69,41 @@ p {
 	text-decoration: none;
 }
 
+aside {
+	section {
+		padding: 10px 0;
+		border-top: 1px solid $grayLighter;
+		&:first-child {
+			border: 0;
+			padding-top: 0;
+		}
+		span {
+			display: block;
+			margin-bottom: 3px;
+			line-height: 1;
+		}
+		h1 {
+			font-size: 2.6em;
+			text-align: left;
+			letter-spacing: -1px;
+			margin-bottom: 3px;
+		}
+	}
+}
+
+#error_explanation {
+	color: #f00;
+	ul {
+		list-style: none;
+		margin: 0 0 18px 0;
+	}
+}
+.field_with_errors {
+	@extend .control-group;
+	@extend .error;
+}
+
+
 /* footer */
 footer {
 	margin-top: 45px;
@@ -86,4 +127,7 @@ footer ul {
 footer ul li {
 	float: left;
 	margin-left: 10px;
+}
+.debug_dump {
+	margin-top: 50px;
 }
