--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
-		<div class="container">
+		<div >
 			<%= link_to "Lim-House", root_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
