--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,1 +1,10 @@
-<li><%=product.title%></li>
+<li class="product_list">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h5 class="panel-title"><%= product.title %></h3>
+		</div>
+		<div class="panel-body">
+	    	<%= product.description %>
+		</div>
+	</div>
+</li>
