--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,8 +26,10 @@
 			</div>
 		</div>
 	<% else %>
-		<h1>Welcome to the Lim-House</h1>
-		<%= link_to "Please sign in", signin_path, class: "btn btn-large btn-primary" %>
+		<div class="center">
+			<h1>Welcome to the Lim-House</h1>
+			<%= link_to "Please sign in", signin_path, class: "btn btn-large btn-primary" %>
+		</div>
 	<% end %>
 </div>
 
