--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,11 @@
-Produkt: <%= @prod.title %>
+<% provide(:title, "#{@prod.title}") %>
+
+<h2> Product info page </h2>
+<h3> Produkt: <%= @prod.title %> </h3>
 <br>
-<br>
-<%= @prod.description %>
+<div class="row">
+	Opis: <%= simple_format(@prod.description) %><br>
+	Cena: <%= @prod.price %><br>
+	Status: <%= ProductsHelper::Product_status.key(@prod.status) %><br>
+	Ilość: <%= @prod.quantity %><br>
+</div>
