--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,10 +5,20 @@
 				<%= link_to 'Edit', edit_product_path(product) %> |
 				<%= link_to 'Delete', product, method: :delete, confirm: "You sure?" %>
 			</div>
+
 			<h5 class="panel-title"><%= link_to "#{product.title}", product_path(product) %></h5>
 		</div>
 		<div class="panel-body">
-	    	<%= simple_format(product.description) %>
+			<div class="product-thumbnail">
+				<%= image_tag product.image_lnk, width:"100", height:"auto" %>
+			</div>
+			<div class="span8">
+	    		<%= simple_format(product.description) %>
+	    	</div>
+    		<div class="product-listing-side">
+				<span><strong> Price: <%= product.price %></strong></span><br>
+				<span>Ilość: <%= product.quantity %></span>
+			</div>
 		</div>
 	</div>
 </li>
