--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,17 +2,8 @@
 <div>
 	<% if signed_in? %>
 
-		<ul class="nav nav-pills nav-stacked side-toolbar">
-  			<li><br><br><br></li>
-  			<li><a href='products/new'>
-  				<button type="button" class="btn btn-inverse btn-small">
-  					<b>P</b><span class="glyphicon glyphicon-plus"></span>
-				</button></a></li>
-  			<li><a href="#">A</a></li>
-  			<li><a href="#">S</a></li>
-  			<li><br></li>
-		</ul>
-
+		<%= render 'side-toolbar' %>
+		
 		</div>
 		<div >
 			<ul class="nav nav-tabs products_auctions_tabs">
