--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,8 +5,8 @@
 				<%= link_to 'Edit', edit_product_path(product) %> |
 				<%= link_to 'Delete', product, method: :delete, confirm: "You sure?" %>
 			</div>
-
 			<h5 class="panel-title"><%= link_to "#{product.title}", product_path(product) %></h5>
+			<%= link_to "Auction", {:controller => 'auctions', :action => 'new', :product_id => product.id} %>
 		</div>
 		<div class="panel-body">
 			<div class="product-thumbnail">
