--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,8 +17,9 @@
 		</div>
 		<div class="span8">
 			<aside>
-				<section>
-					Opis: <%= simple_format(@prod.description) %><br>
+				Opis: 
+				<section class ="center">
+					<%= simple_format(@prod.description) %><br>
 				</section>
 			</aside>	
 		</div>
