--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h2> Edit product page </h2>
 
-<div class="row">
+<div class="row new_product_form">
 	<div class="offset2 span9">
 		<%= form_for @product do |f|%>
 			
