--- a/app/views/static_pages/_side-toolbar.html.erb
+++ b/app/views/static_pages/_side-toolbar.html.erb
@@ -10,9 +10,14 @@
 				<b>A</b><span class="glyphicon glyphicon-plus"></span>
 		</button></a>
 	</li>
-		<li><a href='#'>
-			<button type="button" class="btn btn-inverse btn-lg">
-				<b><span class="glyphicon glyphicon-tasks"></span></b>
+	<li><a href='#'>
+		<button type="button" class="btn btn-inverse btn-lg">
+			<b><span class="glyphicon glyphicon-tasks"></span></b>
+		</button></a>
+	</li>
+	<li><a href= 'clients'>
+		<button type="button" class="btn btn-inverse btn-lg">
+			<b><span class="glyphicon glyphicon-user"></span></b>
 		</button></a>
 	</li>
 </ul>
