--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,7 @@
 $lightGray: #999;
 $grayMediumLight: #eaeaea;
 $productsTabGray: #fcfcff;
+$well: #f5f5f5;
 
 /* universal */
 html {
@@ -19,7 +20,7 @@ body {
 	padding-top: 60px;
 	padding-left: 10px;
 	padding-right: 10px;
-	border-left: 54px solid #1b1b1b;
+	/*border-left: 54px solid #1b1b1b;*/
 	-moz-border-left-colors: #101010, #191919, #101010;
 }
 section {
@@ -37,6 +38,26 @@ textarea {
 div {
 	word-wrap:break-word;
 }
+
+.center-block {
+  display: block;
+  margin-left: 180px;
+  margin-right: 260px;
+}
+
+.btn {
+	width: 250px;
+	height: 200px;
+	background-image: none;
+	background-color: $well;
+}
+.activez {
+		border: 2px solid #beb;
+		margin: 10px;
+		background-color: #efe;
+}
+
+
 
 /* tab nav tabs */
 .tab-pane {	
@@ -57,8 +78,22 @@ div {
 	.active {
     	background: $productsTabGray;
     	a {
-			background: $productsTabGray;
+			background: #555;
 		}
+	}
+}
+
+.panelzz {
+	margin-left: 20px;
+	margin-right: 20px;
+	background-color: $grayMediumLight;
+	.panel-heading {
+		border: 1px solid #ddd;
+		padding: 5px;
+	}
+	.panel-body {
+		padding: 5px;
+		border: 1px solid #ddd;
 	}
 }
 
