--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,19 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container-fluid">
+	<div class="row">
+	<div class="">
 		<%= render 'layouts/header' %>
 	
 		<% flash.each do |key, value| %>
 			<div class="alert alert-<%= key %>"><%= value %></div>
 		<% end %>
 		<%= yield %>
-		<%= render 'layouts/footer' %>
+		<% render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
+	</div>
+	</div>
 	</div>
 </body>
 </html>
