add new models for return and comments

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,9 +17,9 @@ html {
 }
 body {
 	padding-top: 60px;
-	padding-left: 10px;
-	padding-right: 10px;
-	border-left: 54px solid #1b1b1b;
+	padding-left: 50px;
+	padding-right: 50px;
+	/*border-left: 54px solid #1b1b1b;*/
 	-moz-border-left-colors: #101010, #191919, #101010;
 }
 section {
