--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,18 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<%= render 'layouts/header' %>
 	
 		<% flash.each do |key, value| %>
 			<div class="alert alert-<%= key %>"><%= value %></div>
 		<% end %>
-		<%= yield %>
-		<%= render 'layouts/footer' %>
+		<div class="row">
+			<div>
+				<%= yield %>
+			</div>
+		</div>
+		<% render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
 	</div>
 </body>
