basic functions for returns and comments

--- a/app/assets/stylesheets/prod_returns.css.scss
+++ b/app/assets/stylesheets/prod_returns.css.scss
@@ -37,3 +37,15 @@
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
 }
+.status1 {
+	background-image: none;
+	background-color: #cdf;
+}
+.status2 {
+	background-image: none;
+	background-color: #feb;
+}
+.status3 {
+	background-image: none;
+	background-color: #dfc;
+}
