--- a/app/views/prod_returns/_prod_return.html.erb
+++ b/app/views/prod_returns/_prod_return.html.erb
@@ -1,4 +1,4 @@
-<tr>
+<tr class="<%= get_status_color(prod_return.status) %>">
 	<td> <%= link_to "#{prod_return.id}", prod_return_path(prod_return.id) %> </td>
 	<td> <%= prod_return.auction_name %> </td>
 	<td> <%= prod_return.client_name %> </td>
@@ -7,15 +7,5 @@
 	<td> <%= prod_return.status %> </td>
 	<td> <%= render partial:'shared/comments_modal', locals:{prod_return:prod_return} %> </td>
 	<td> <%= render partial:'shared/status_modal', locals:{prod_return:prod_return} %> </td>
+	<td> <small>na razie nie dziala</small> </td>
 </tr>
-
-
-<%= select_tag(:event_id, options_for_select([[1],[2],[3]]), { :onchange => "test()" }) %>
-<%= text_area_tag :zxc, 'zxczxc', id:"msg" %>
-<script type="text/javascript">
-  function test()
-  {
-      alert ("this is a test")
-      $('#msg').html('vbn')
-  }
-</script>
