--- a/app/views/shared/_comments_modal.html.erb
+++ b/app/views/shared/_comments_modal.html.erb
@@ -1,7 +1,7 @@
-<button class="btn btn-small" data-toggle="modal" data-target="#myModal">
+<button class="btn btn-small" data-toggle="modal" data-target=<%= "#myModal#{prod_return.id}" %> >
   <%= "#{prod_return.comments[0].content[0..23]}..." %>
 </button>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id=<%= "myModal#{prod_return.id}" %> tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
