--- a/app/views/shared/_status_modal.html.erb
+++ b/app/views/shared/_status_modal.html.erb
@@ -1,26 +1,27 @@
-<button class="btn btn-small" data-toggle="modal" data-target="#change_status">
+<button class="btn btn-small" data-toggle="modal" data-target=<%= "#change_status#{prod_return.id}" %>>
   Zmien status
 </button>
-<div class="modal fade" id="change_status" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="<%="change_status#{prod_return.id}"%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h5 class="modal-title" id="myModalLabel">
-			<%= form_tag(controller:"comments", action:"create") do %>
-        	Zmień status z <%= prod_return.status %> na <%= select_tag :status, options_for_select([[1],[2],[3]], prod_return.status+1)%>
+			<%= form_for(prod_return) do |f|%>
+        	Zmień status z <%= prod_return.status %> na <%= f.select :status, options_for_select([[1],[2],[3]], prod_return.status+1)%>
         </h5>
       </div>
       <div class="modal-body">
-			<%= text_area_tag 'content', "#{generate_status_message(prod_return)}", :rows => 2, :style => 'width: 100%' %>
+      		<%= fields_for prod_return.comments.build do |c|%>
+				<%= c.text_area :content, value:generate_status_message(prod_return), :rows => 4, :style => 'width: 100%' %>
+			<% end %>
       </div>
       <div class="modal-footer">
       	<button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
-      		<%= hidden_field_tag :ret, prod_return.id %>
-      		<%= hidden_field_tag :user_id, current_user.id %>
-      		<%= submit_tag "Gotowe", class:"btn btn-default btn-success" %>
+      		<%= f.hidden_field :ret, value:prod_return.id %>
+      		<%= f.hidden_field :user_id, value:current_user.id %>
+      		<%= f.submit "Gotowe", class:"btn btn-default btn-success" %>
       		<% end %>
-        <!-- <button type="button" class="btn btn-default">Gotowe</button> -->
       </div>
     </div>
   </div>
