--- a/app/views/shared/_comments_modal.html.erb
+++ b/app/views/shared/_comments_modal.html.erb
@@ -1,4 +1,4 @@
-<button class="btn btn-small" data-toggle="modal" data-target=<%= "#myModal#{prod_return.id}" %> >
+<button class="btn btn-small comment" data-toggle="modal" data-target=<%= "#myModal#{prod_return.id}" %> >
   <%= "#{prod_return.comments[0].content[0..23]}..." %>
 </button>
 <div class="modal fade" id=<%= "myModal#{prod_return.id}" %> tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
