--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
 			</ul>
 			<div class="tab-content">
 				<div id="all" class="tab-pane active">
-				<table class="table">
+				<table class="table table-bordered td">
 					<tr>
 						<th>#</th>
 						<th>Tytuł aukcji</th>
