--- a/app/assets/stylesheets/prod_returns.css.scss
+++ b/app/assets/stylesheets/prod_returns.css.scss
@@ -20,7 +20,10 @@
 	margin-top: 5px !important;
 }
 .comment {
-	width: 170px;	
+	width: 170px;
+	textarea {
+		width: 350px !important;
+	}
 }
 .panel {
   margin-bottom: 20px;
