--- a/app/views/prod_returns/new.html.erb
+++ b/app/views/prod_returns/new.html.erb
@@ -1,7 +1,7 @@
 <h2> Dodaj nowy ticket zwrotu </h2>
 <div class="row">
+	<%= form_for @ret do |f| %>
 	<div class="offset3 span5">
-		<%= form_for @ret do |f| %>
 			<div class="input-group">
 				<span >Tytuł aukcji: </span>
 				<%= f.text_field :auction_name %>
@@ -22,10 +22,10 @@
 			<div class="offset1 span6">
 			<div class="comment">
 				<p>Komentarz:</p>
-				<%= text_area_tag 'comment',"Oczekiwanie na przesyłkę, przekazane dalej", :rows => 4, :style => 'width: 70%' %>
+				<%= text_area_tag 'comment',"Oczekiwanie na przesyłkę, przekazane dalej", :rows => 4, :style => 'width: 100%' %>
 			</div>
-			<div>
-				<br><br>
+			<br><br>
+			<div input-group>
 				<span class="input-group-btn "> <%= submit_tag "Gotowe", class:"btn btn-success"  %> </span>
 			</div>
 			</div>
