add small javascripts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,38 @@
 		<% render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
 	</div>
+
+
+<script type="text/javascript">
+function textLengthLimit(id_source, id_target, limit) {
+	var tmp;
+	var text;
+    tmp = limit - document.getElementById(id_source).value.length
+    if (tmp > 0) {
+    	text = "pozostalo "+tmp;
+    }else {
+    	text = "tekst jest za dlugi o "+ Math.abs(tmp);
+    }
+    document.getElementById(id_target).innerHTML = text;
+}
+
+function updateCommentMsg(id_source, id_target) {
+	var tmp;
+	var text;
+    tmp = document.getElementById(id_source).value;
+    if (tmp == "przyjete") {
+    	text = "Oczekiwanie na przesyłkę, przekazane dalej";
+    }else if (tmp == "przetworzone") {
+    	text = "Przesylka dotarla, wszystko sie zgadza. Czeka na wyslanie";
+    }else if (tmp == "wyslane") {
+    	text = "Przesylka wyslana";
+    }else if (tmp == "zamknij_usun") {
+    	text = "Zwrot zamkniety i usuniety";
+    }
+    document.getElementById(id_target).value = text;
+    document.getElementById("qwe").innerHTML = text;
+}
+</script>
+
 </body>
 </html>
